[project]
name = "comfyui-runware"
description = "Runware Inference API Integration for ComfyUI (No GPU Required)."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["python-dotenv"]

[project.urls]
Repository = "https://github.com/Runware/ComfyUI-Runware"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Runware"
Icon = ""
